--- a/PersonasPrueba/PersonasPrueba.csproj
+++ b/PersonasPrueba/PersonasPrueba.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginDataModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\People.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
